[gd_scene load_steps=9 format=2]

[ext_resource path="res://Battle/Battler.gd" type="Script" id=1]
[ext_resource path="res://Assets/BattlerSprites/magra_explorerTEMP.png" type="Texture" id=2]
[ext_resource path="res://Assets/AbilityIcons/enchant-acid-1.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/progressBar.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 36.1197, 52.8881 )

[sub_resource type="Animation" id=2]

resource_name = "attack"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("battlerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "emit_damage"
} ]
}

[sub_resource type="Animation" id=3]

resource_name = "hurt"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("battlerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=4]

length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("battlerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="Battler" type="Node2D" groups=[
"battler",
]]

script = ExtResource( 1 )
flip = false

[node name="battlerSprite" type="Sprite" parent="." index="0"]

position = Vector2( -10, 0 )
texture = ExtResource( 2 )
vframes = 3
hframes = 8
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="battlerArea" type="Area2D" parent="." index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="battlerArea" index="0"]

shape = SubResource( 1 )

[node name="battlerAnim" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/attack = SubResource( 2 )
anims/hurt = SubResource( 3 )
anims/idle = SubResource( 4 )
blend_times = [  ]

[node name="battleAction" type="Sprite" parent="." index="3"]

position = Vector2( 50, -60 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="battlerInfo" type="Control" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="healthBar" parent="battlerInfo" index="0" instance=ExtResource( 4 )]

margin_left = -52.0
margin_top = 56.0
margin_right = 52.0
margin_bottom = 73.0

[node name="adrenalineBar" parent="battlerInfo" index="1" instance=ExtResource( 4 )]

margin_left = -52.0
margin_top = 75.0
margin_right = 52.0
margin_bottom = 87.0
main_color = Color( 1, 0.859619, 0.101563, 1 )
gain_color = Color( 0, 0.765625, 1, 1 )
lose_color = Color( 1, 0.368134, 0.199219, 1 )

[node name="positions" type="Node2D" parent="." index="5"]

_sections_unfolded = [ "Transform" ]

[node name="front" type="Position2D" parent="positions" index="0"]

position = Vector2( 70, 0 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="above" type="Position2D" parent="positions" index="1"]

position = Vector2( 0, -50 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="above_back" type="Position2D" parent="positions" index="2"]

position = Vector2( -70, -50 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="above_front" type="Position2D" parent="positions" index="3"]

position = Vector2( 70, -50 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="below" type="Position2D" parent="positions" index="4"]

position = Vector2( 0, 50 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="below_back" type="Position2D" parent="positions" index="5"]

position = Vector2( -70, 50 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="below_front" type="Position2D" parent="positions" index="6"]

position = Vector2( 70, 50 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="back" type="Position2D" parent="positions" index="7"]

position = Vector2( -70, 0 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Label" type="Label" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 73.0
margin_top = -77.0
margin_right = 113.0
margin_bottom = -63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="input_event" from="battlerArea" to="." method="_on_battlerArea_input_event"]

[connection signal="animation_finished" from="battlerAnim" to="." method="_on_battlerAnim_animation_finished"]


